I'm mega cool! Completely finished the ability to run an application from the jetty server. The old jnlp approach doesn't work anymore. Had to look for something new. I found cheerpj which allows you to run java applications in the browser. Very cool! It's free for opensource non-commercial projects. I had to completely redo file uploads and saves. Got rid of the evil URL which was glitching a lot. Added scripts for launching. Updated documentation. In short, cool!